--- a/Lab1.html
+++ b/Lab1.html
@@ -33,8 +33,8 @@
   <header>
     <h1>Fractal Geometry Lab Report</h1>
     <p class="author">
-      [Your Name] <br />
-      [Date]
+      Michelle Briceno <br />
+      1.9.2025
     </p>
   </header>
   
