--- a/Lab1.html
+++ b/Lab1.html
@@ -34,7 +34,7 @@
     <h1>Fractal Geometry Lab Report</h1>
     <p class="author">
       Michelle Briceno <br />
-      1.9.2025
+      1.25.2025
     </p>
   </header>
   
@@ -51,10 +51,12 @@
       <section id="introduction">
         <h2>Introduction</h2>
         <p>
-          This is a sample introduction showcasing how you might structure 
-          your opening section. Replace this paragraph with a concise 
-          overview of the topic or project you are addressing. You can then 
-          expand the explanation as needed.
+         Fractal geometry is a branch of mathematics that explores complex
+	patterns that are self-similar across different scales. Unlike
+	traditional Euclidean geometry, which studies simple shapes like lines,
+	circles, and polygons, fractal geometry focuses on irregular, fragmented,
+	and infinitely detailed shapes found both in mathematical constructs
+	and in nature.
         </p>
       </section>
 
@@ -71,8 +73,8 @@
 	import numpy as np
 	import matplotlib.pyplot as plt
 
-	x = np.linspace(-10, 10, 100)
-	y = 2*x + 5
+	x = np.linspace(-5, 5, 100)
+	y = 3*x + 10
 
 	plt.plot(x, y)
 	plt.title("Sample Plot")
@@ -96,10 +98,9 @@
       
         <h2>Results &amp; Analysis</h2>
         <p>
-          In this placeholder section, you might describe observations,
-          results, or insights gained from any analysis. You can incorporate 
-          references to equations (e.g., $y = mx + b$) or embed images and 
-          other visual aids to illustrate your points.
+          Many fractals are generated through iterative processes, 
+	  applying simple mathematical rules repeatedly to produce
+	  complex structures.
         </p>
 
 
@@ -135,7 +136,10 @@
       <section id="conclusion">
         <h2>Conclusion</h2>
         <p>
-          In this sample conclusion, we highlight how the iterative approach to generating fractals reveals the vast complexity inherent in seemingly simple equations. Through our Python implementation, we observed that small parameter changes can produce markedly different fractal patterns, underscoring the Mandelbrot set's boundless intricacy. Our visualizations not only confirm the self-similarity and infinite resolution of the set, but also underscore the crucial role of computational optimizations in making high-resolution explorations feasible. Ultimately, this lab demonstrates that fractal geometry, far from being mere mathematical curiosities, provides deep insights into pattern formation and complexity in both pure mathematics and broader scientific contexts. 
+          By bridging the gap between mathematics and the natural world, fractal
+	geometry provides powerful tools for understanding and simulating complex
+	systems. It opens a window to explore the beauty and intricacy of both the
+	abstract and the tangible universe. 
         </p>
       </section>
 
